# yt-transcript-mcp

./: README.md  pyproject.toml  server.py
9b/6a954def1b/: metadata.json
9b/6a954def1b/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
9b/6a954def1b/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
9b/6a954def1b/2/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
d3/550453fe44/: metadata.json
d3/550453fe44/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
d4/47f1f2648e/: metadata.json
d4/47f1f2648e/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
d4/47f1f2648e/1/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
