[project]
name = "youtube-transcript-mcp"
version = "0.1.0"
description = "MCP server for extracting YouTube video transcripts"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "youtube-transcript-api>=1.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
]

[project.optional-dependencies]
ytdlp = ["yt-dlp>=2024.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
